--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,20 @@
+/* Author: Katrine Heldor Storm */
+/* Guide: Jon-Martin Storm */
+
+@font-face {
+    font-family: 'Roboto Mono', monospace;
+    src: url(fonts/roboto-mono-v12-latin-regular.woff2) format('woff2'),
+         url(fonts/roboto-mono-v12-latin-regular.woff) format('woff'),
+         url(fonts/roboto-mono-v12-latin-regular.ttf) format('truetype');
+    font-display: optional;
+}
+
 body,
 html {
     height: 100%;
     margin: 0;
-    font-family: "Lucida Console", "Courier New", monospace;
+    padding: 0;
+    font-family: "Roboto Mono", monospace;
 }
 
 .bg {
@@ -17,35 +29,79 @@ html {
     position: relative;
 }
 
-.experience {
-    height: 100%;
-}
 
-.contact {
-    height: 100%;
-}
-
-.caption {
+.caption-outer {
     position: absolute;
-    left: 0;
-    top: 40%;
-    width: 100%;
+    left: 50%;
+    top: 50%;
+    width: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     color: #000;
 }
 
-.caption span.border {
-    background-color: #111;
+.caption-inner {
+    margin: auto;
+    padding: 20px;
+    width: 100%;
+    background-color: rgba(17, 17, 17, 0.8);
+}
+
+.title-text {
     color: #fff;
-    padding: 18px;
     font-size: 25px;
     letter-spacing: 10px;
 }
 
-.caption img {
+
+.caption-outer img {
     border-radius: 50%;
-    border: 5px solid #111;
-    margin-top: 30px;
+    /* border: 5px solid #111; */
     width: 150px;
     height: 150px;
 }
+
+.experience {
+    text-align: center;
+    width: 60%;
+    margin: auto;
+}
+
+.contact {
+    text-align: center;
+    width: 60%;
+    margin: auto;
+}
+
+.column {
+    width: 40%;
+    padding: 2%;
+    display:inline-block;
+    text-align: left;
+    background-color: silver;
+}
+
+#bottom {
+    font-size: 0.7vw;
+    position: absolute;
+    bottom: 0;
+    text-align: right;
+    width: 100%;
+}
+
+@media screen and (max-width: 500px) {
+    .experience,
+    .contact{
+        width: 100%;
+    }
+    .column {
+        width: 80%
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #bottom {
+        font-size: 7px;
+    }
+}
+
